style.css
#sliders > li > div > div.ui-slider {
	width:120px;
	height:7px;
	margin:10px 10px 2px;
	display:inline-block;
}

#sliders > li > label {
	line-height:2em;
}

#sliders > li > div {
	display:inline-block;
	float:right;
	padding-right:4px;
}

* {
	font-family:helvetica;
}

#sliders {
/*-webkit-column-count: 3; /* Chrome, Safari, Opera */
/*-moz-column-count: 3; /* Firefox */
/*column-count: 3;  */
}

#sliders > ul > li > label {
	float:left;
	display:block;
}

#sliders {
	-moz-column-count:3;
	-moz-column-gap:20px;
	-moz-column-rule:4px solid #ccc;
	-webkit-column-count:3;
	-webkit-column-gap:20px;
	-webkit-column-rule:4px solid #ccc;
	column-count:3;
	column-gap:20px;
	column-rule:4px solid #ccc;
	width:1080px;
}

#sliders > li > div > div.value {
	padding:0 7px;
	margin:0;
	display:inline;
}

li {
	list-style-type:none;
	height:38px;
}

#logo {
    height:40px;
}
#teams {
	font-size:10px;
	width:1080px;
}

#play-in,#play-in-title {
	text-align:center;
}

#data-headline,#share-div,#year-div,#top-bar,#correct-div {
	display:inline-block;
}

#share-div,#year-div,#correct-div {
	padding-left:20px;
}

#play-in > li,#play-in > li > div {
	display:inline;
	padding:10px;
}

.jQBracket > .tools {
	display:none;
}

.rtol {
	float:right;
	text-align:right;
}

.ltor {
	float:left;
	text-align:left;
}

.fl {
	float:left;
}

.fr {
	float:right;
}

.winner {
	color:#000;
}

.loser {
	color:grey;
}

.correct {
	color:green;
}

.incorrect {
	color:red;
}

.bracket-container {
	width:1080px;
	height:643px;
	background:url(bracket.svg) no-repeat top left;
	background-size:contain;
	letter-spacing:-.5px;
	-webkit-print-color-adjust:exact;
}

#championship {
	font-weight:700;
	position:absolute;
	left:516px;
	text-align:center;
	line-height:65em;
	height:30em;
}

.championship-left {
	line-height:54em;
}

.championship-right {
	line-height:76em;
}

#scoring-wrapper {
	font-weight:700;
	position:absolute;
	left:516px;
	text-align:center;
	padding-top:48em;
	height:30em;
}

/****** round 1 ******/
.round1-top,.round1-bottom {
	width:90px;
	height:3em;
}

.round1-top {
	line-height:3em;
}

.round2-topwrap .round1-bottom {
	width:89px;
}

.round2-bottomwrap .round1-top {
	width:89px;
}

/****** round 2 ******/
.round2-top,.round2-bottom {
	width:86px;
	height:4em;
	line-height:5em;
}

.round3-topwrap .round2-bottom {
	width:86px;
}

.round3-bottomwrap .round2-top {
	width:86px;
}

.tournament4-wrap .round2-top {
}

.round2-topwrap,.round2-bottomwrap {
	width:180px;
	height:4em;
}

/****** round 3 ******/
.round3-top,.round3-bottom {
	width:86px;
	height:8em;
	line-height:9em;
}

.round4-topwrap .round3-bottom {
	width:86px;
}

.round4-bottomwrap .round3-top {
	width:86px;
}

.tournament8-wrap .round3-top {
}

.round3-topwrap,.round3-bottomwrap {
	width:270px;
	height:8em;
}

/****** round 4 ******/
.round4-top,.round4-bottom {
	width:86px;
	height:16em;
	line-height:17em;
}

.round5-topwrap .round4-bottom {
	width:86px;
}

.round5-bottomwrap .round4-top {
	width:86px;
}

.round4-topwrap,.round4-bottomwrap {
	width:360px;
}

.tournament16-wrap .round4-top {
}

/****** round 5 ******/
.round5-top,.round5-bottom {
	width:86px;
	height:32em;
	line-height:33em;
}

.tournament32-wrap .round5-top {
}

.round5-topwrap,.round5-bottomwrap,.tournament16-wrap {
	width:450px;
}

/****** round 6 ******/
.round6-top,.round6-bottom {
	width:86px;
	height:32em;
}

.tournament32-wrap {
	width:540px;
}

